# Tasks

./: .env  Cargo.toml  tasks-2022-09-16.ics
src/: app.rs  main.rs  task.rs  utils.rs
tasks_data/: httpssashin.onlineremote.phpdavcalendarssashinpersonal.cal  httpssashin.onlineremote.phpdavcalendarssashinrust-playground.cal  httpssashin.onlineremote.phpdavcalendarssashintasks.cal
tasks_data/tasks_data/: httpssashin.onlineremote.phpdavcalendarssashincontact_birthdays.cal  httpssashin.onlineremote.phpdavcalendarssashinrust-playground.cal  httpssashin.onlineremote.phpdavcalendarssashintasks.cal
