[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kitchen-fridge = "0.4.0"
ical-daladim = {version="0.8", features= ["serde-derive"]}
uuid = "1.1.2"
dotenvy = "0.15.3"
url = "2.3.1"
futures = "0.3.24"
chrono = "0.4.22"
tokio = { version = "1.21.2", features = ["full"] }
strum = "0.24.1"
strum_macros = "0.24"
rand = "0.8.5"
